# mathematical-methods-in-deep-learning-ipython

./: .gitignore  README.md  pyproject.toml  requirements.txt
python/ch2/: 2.2-vector-pytorch-intro.ipynb
